--- a/index.html
+++ b/index.html
@@ -112,34 +112,137 @@
             <source src="assets/videos/banner.mp4" type="video/mp4">
         </video>
 
-        <div class="container d-flex justify-content-center align-items-center">
+        <section class="container d-flex justify-content-center align-items-center">
             <div class="m-auto text-center">
-                <h1 class="presentation text-uppercase">
-                    Bienvenu sur <br> Industrielle RH
-                </h1>
-                <p class="presentation text-white">
-                    Nous sommes spécialisée dans le recrutement de travailleurs burkinabès qualifiés pour le secteur
-                    manufacturier québécois
-                </p>
+                <div id="carouselExample" class="carousel slide">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <!--  -->
+                            <h1 class="presentation text-uppercase">
+                                Bienvenu sur <br> <span class="text-warning">Industrielle RH</span>
+                            </h1>
+                            <p class="presentation text-white">
+                                Nous sommes spécialisée dans le recrutement de travailleurs burkinabès qualifiés pour le
+                                secteur
+                                manufacturier québécois
+                            </p>
+                            <!--  -->
+                        </div>
+                        <div class="carousel-item">
+                            <!--  -->
+                            <h1 class="presentation text-uppercase">
+                                Bienvenu sur <br> Industrielle RH
+                            </h1>
+                            <p class="presentation text-white">
+                                Nous sommes spécialisée dans le recrutement de travailleurs burkinabès qualifiés pour le
+                                secteur
+                                manufacturier québécois
+                            </p>
+                            <!--  -->
+                        </div>
+                        <div class="carousel-item">
+                            <!--  -->
+                            <h1 class="presentation text-uppercase">
+                                Bienvenu sur <br> Industrielle RH
+                            </h1>
+                            <p class="presentation text-white">
+                                Nous sommes spécialisée dans le recrutement de travailleurs burkinabès qualifiés pour le
+                                secteur
+                                manufacturier québécois
+                            </p>
+                            <!--  -->
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+
                 <div class="mt-5 play-div mx-auto" type="button">
                     <svg width="21" height="24" viewBox="0 0 21 24">
                         <path d="M1.25 0.94263L23 13.5L1.25 26.0574L1.25 0.94263Z" stroke="white" fill="none"></path>
                     </svg>
                 </div>
                 <div class="marquee d-flex">
-                    <p class="text-outline  text-uppercase  ">recrutement de travailleurs burkinabès qualifiés</p>
+                    <p class="text-outline  text-uppercase  font-size-10">recrutement de travailleurs burkinabès
+                        qualifiés</p>
                 </div>
-                
-
+            </div>
+        </section>
+    </div>
+    <section class="container-fluid m-0 p-0 section1">
+        <div class="row m-0 p-0 position-relative">
+            <div class="col-7 m-0 bg-warning p-5">
+                <!--  -->
+                <div class="py-5">
+                    <h1 class="text-white text-uppercase mt-5 fw-9 font-size-7">
+                        Nous sommes spécialiste dans le recrutement international au Québec
+                    </h1>
+                    <p class="p1 text-white mb-5">
+                        Nous sommes spécialisés dans le recrutement de personnel multilingue et profils de hautes
+                        compétences, destinés à occuper des postes à responsabilité. Nous développons des solutions
+                        adaptées
+                        aux besoins de nos clients et en adéquation avec les exigences du marché. Nous conseillons et
+                        guidons nos clients et candidats tout au long du processus de recrutement afin de leur assurer
+                        une
+                        entière satisfaction.
+                    </p>
+                    <div class="mt-5 pt-5 d-flex " >
+                        <p class="font-size-3 fw-6 text-uppercase text-white mb-5">
+                            En savoir plus
+                        </p>
+                        <p class="text-white ms-4 pt-1">
+                            <svg viewBox="0 0 24 24" width="34" height="34" stroke="#fff" stroke-width="2"
+                                fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1"
+                                Tiney="true">
+                                <line x1="5" y1="12" x2="19" y2="12" Tiney="true"></line>
+                                <polyline points="12 5 19 12 12 19"></polyline>
+                            </svg>
+                        </p>
+                    </div>
+                    <div class="card-abonnees bg-white shadow br-1 p-5 mx-auto position-absolute">
+                        <div class="d-flex  align-items-center">
+                            <div class=" icone-employe-div mx-auto " type="button">
+                                <svg viewBox="0 0 27 27" width="27" height="27" stroke="currentColor" stroke-width="2"
+                                    fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1">
+                                    <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2" Tiney="true"></path>
+                                    <circle cx="9" cy="7" r="4"></circle>
+                                    <path d="M23 21v-2a4 4 0 0 0-3-3.87"></path>
+                                    <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
+                                </svg>
+                            </div>
+                            <div>
+                                <h1 class="mb-0 text-uppercase mt-3 fw-9 font-size-5">
+                                    +23 K
+                                </h1>
+                                <p class="font-size-2 mb-5">
+                                    Profils recrutés.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--  -->
+            </div>
+            <div class="col-5 m-0 bg-white p-0">
+                <img src="/assets/images/carpenter.jpg" alt="" class="img-fluid">
             </div>
         </div>
-    </div>
+    </section>
     <!-- Fin Main -->
 </body>
 <!-- Partie des CDN JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
     crossorigin="anonymous"></script>
+<script src="/js/accueil.js"></script>
 <!-- Partie des CDN JS -->
 
 </html>
