Mise en place des tries

--- a/index.html
+++ b/index.html
@@ -191,8 +191,7 @@
                         adaptées
                         aux besoins de nos clients et en adéquation avec les exigences du marché. Nous conseillons et
                         guidons nos clients et candidats tout au long du processus de recrutement afin de leur assurer
-                        une
-                        entière satisfaction.
+                        une entière satisfaction.
                     </p>
                     <div class="mt-5 pt-5 d-flex " >
                         <p class="font-size-3 fw-6 text-uppercase text-white mb-5">
