Mise en place de la section de présentation

--- a/index.html
+++ b/index.html
@@ -188,8 +188,7 @@
                     <p class="p1 text-white mb-5">
                         Nous sommes spécialisés dans le recrutement de personnel multilingue et profils de hautes
                         compétences, destinés à occuper des postes à responsabilité. Nous développons des solutions
-                        adaptées
-                        aux besoins de nos clients et en adéquation avec les exigences du marché. Nous conseillons et
+                        adaptées aux besoins de nos clients et en adéquation avec les exigences du marché. Nous conseillons et
                         guidons nos clients et candidats tout au long du processus de recrutement afin de leur assurer
                         une entière satisfaction.
                     </p>
