Mise en place des sections 2 & 3 de la page d'acceuil

--- a/index.html
+++ b/index.html
@@ -177,29 +177,30 @@
             </div>
         </section>
     </div>
+    <!-- Section scroll image -->
     <section class="container-fluid m-0 p-0 section1">
         <div class="row m-0 p-0 position-relative">
-            <div class="col-7 m-0 bg-warning p-5">
+            <div class="col-7 m-0 bg-blue-app p-5">
                 <!--  -->
-                <div class="py-5">
+                <div class="p-5">
                     <h1 class="text-white text-uppercase mt-5 fw-9 font-size-7">
                         Nous sommes spécialiste dans le recrutement international au Québec
                     </h1>
                     <p class="p1 text-white mb-5">
                         Nous sommes spécialisés dans le recrutement de personnel multilingue et profils de hautes
                         compétences, destinés à occuper des postes à responsabilité. Nous développons des solutions
-                        adaptées aux besoins de nos clients et en adéquation avec les exigences du marché. Nous conseillons et
+                        adaptées aux besoins de nos clients et en adéquation avec les exigences du marché. Nous
+                        conseillons et
                         guidons nos clients et candidats tout au long du processus de recrutement afin de leur assurer
                         une entière satisfaction.
                     </p>
-                    <div class="mt-5 pt-5 d-flex " >
+                    <div class="mt-5 pt-5 d-flex " type="button">
                         <p class="font-size-3 fw-6 text-uppercase text-white mb-5">
                             En savoir plus
                         </p>
                         <p class="text-white ms-4 pt-1">
-                            <svg viewBox="0 0 24 24" width="34" height="34" stroke="#fff" stroke-width="2"
-                                fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1"
-                                Tiney="true">
+                            <svg viewBox="0 0 24 24" width="34" height="34" stroke="#fff" stroke-width="2" fill="none"
+                                stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1" Tiney="true">
                                 <line x1="5" y1="12" x2="19" y2="12" Tiney="true"></line>
                                 <polyline points="12 5 19 12 12 19"></polyline>
                             </svg>
@@ -230,10 +231,121 @@
                 <!--  -->
             </div>
             <div class="col-5 m-0 bg-white p-0">
-                <img src="/assets/images/carpenter.jpg" alt="" class="img-fluid">
+                <div class="image-scroll-container ">
+                    <div class="image-scroll-wrapper ">
+                        <img src="/assets/images/carpenter.jpg" alt="" class="img-fluid">
+                        <img src="/assets/images/ai-generative.jpg" alt="" class="img-fluid">
+                        <img src="/assets/images/happy-black-female-business.jpg" alt="" class="img-fluid">
+                        <!-- Ajoutez d'autres images ici -->
+                    </div>
+                </div>
+
+
             </div>
         </div>
     </section>
+    <!-- Fin Section scroll image -->
+    <!-- Section scroll image -->
+    <section class="container-fluid m-0 p-0 section1">
+        <div class="row m-0 p-0 position-relative">
+            <!--  -->
+            <div class="col-6 m-0 bg-white p-0">
+                <div class="image-scroll-container-y ">
+                    <div class="image-scroll-wrapper-y ">
+                        <img src="/assets/images/jeune-homme-ouvrier.jpg" alt="" class="img-fluid">
+                        <img src="/assets/images/femme-manufactured.jpg" alt="" class="img-fluid">
+                        <img src="/assets/images/femme-capenter.jpg" alt="" class="img-fluid">
+                        <img src="/assets/images/jeune-homme-ouvrier.jpg" alt="" class="img-fluid">
+                        <!-- Ajoutez d'autres images ici -->
+                    </div>
+                </div>
+            </div>
+            <!--  -->
+            <div class="col-6 m-0 bg-warning p-5">
+                <!--  -->
+                <div class="p-5">
+                    <h1 class="text-white text-uppercase mt-5 fw-9 font-size-7">
+                        Solution
+                    </h1>
+                    <p class="p1 text-white mb-5">
+                        Le recrutement de travailleurs étrangers peut se révéler une solution appropriée pour répondre à
+                        certaines pénuries de main-d’œuvre au Canada
+                    </p>
+                    <div class="mt-5 pt-5 d-flex " type="button">
+                        <p class="font-size-3 fw-6 text-uppercase text-white mb-5">
+                            En savoir plus
+                        </p>
+                        <p class="text-white ms-4 pt-1">
+                            <svg viewBox="0 0 24 24" width="34" height="34" stroke="#fff" stroke-width="2" fill="none"
+                                stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1" Tiney="true">
+                                <line x1="5" y1="12" x2="19" y2="12" Tiney="true"></line>
+                                <polyline points="12 5 19 12 12 19"></polyline>
+                            </svg>
+                        </p>
+                    </div>
+                </div>
+                <!--  -->
+            </div>
+
+        </div>
+    </section>
+    <!-- Fin Section scroll image -->
+    <!-- Fin Section scroll image -->
+    <!-- Section scroll image -->
+    <section class="container-fluid m-0 p-0 section1 cosmos-background">
+        <div class="row m-0 p-0 position-relative">
+
+            <div class="col-4 m-0  p-5 border-end border-light-subtle border-opacity-10" style="border-color: #e9ecef4f!important;">
+                <!--  -->
+                <div class="p-5">
+                    <h1 class="text-white text-uppercase mt-5 fw-9 font-size-5">
+                        Qualité de la prestation, socle de notre développement
+                    </h1>
+                    <p class="font-size-2 text-white mb-5 mt-4">
+                        Nous adoptons une démarche d’amélioration continue. Nous développons et perfectionnons
+                        continuellement nos services pour apporter à nos clients les meilleures solutions en recrutement
+                        international.
+                    </p>
+
+                </div>
+                <!--  -->
+            </div>
+
+            <div class="col-4 m-0  p-5 border-end border-light-subtle border-opacity-10" style="border-color: #e9ecef4f!important;">
+                <!--  -->
+                <div class="p-5">
+                    <h1 class="text-white text-uppercase mt-5 fw-9 font-size-5">
+                        Respect des attentes des candidats
+                    </h1>
+                    <p class="font-size-2 text-white mb-5 mt-4">
+                        Nous accordons une attention toute particulière aux attentes de nos candidats et à leur parcours
+                        professionnel. Nous nous efforçons de leur proposer des offres d’emploi qui correspondent à leur
+                        profil et leur donnent d’intéressantes opportunités de carrière, en terme de poste et en terme
+                        d’intégration.
+                    </p>
+
+                </div>
+                <!--  -->
+            </div>
+
+            <div class="col-4 m-0  p-5 ">
+                <!--  -->
+                <div class="p-5">
+                    <h1 class="text-white text-uppercase mt-5 fw-9 font-size-5">
+                        Promotion d’une mobilité internationale
+                    </h1>
+                    <p class="font-size-2 text-white mb-5 mt-4">
+                        Nos consultants ont accès à une base de données commune à tous. Nous croyons en la mobilité
+                        internationale comme facteur d’évolution professionnelle.
+                    </p>
+
+                </div>
+                <!--  -->
+            </div>
+
+        </div>
+    </section>
+    <!-- Fin Section scroll image -->
     <!-- Fin Main -->
 </body>
 <!-- Partie des CDN JS -->
