--- a/index.html
+++ b/index.html
@@ -482,8 +482,7 @@
                             <svg viewBox="0 0 24 24" width="28" height="28" stroke="#fff" stroke-width="2" fill="none"
                                 stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1">
                                 <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
-                                <polyline points="9 22 9 12 15 12 15 22" Tiney="true"></polyline>
-                            </svg>
+                                <polyline points="9 22 9 12 15 12 15 22" Tiney="true"></polyline></svg>
                             <span class="ms-3 text-white lh-lg">
                                 Address: 755-E Matte, Brossard, Québec, J4Y 2P4
                             </span>
