Mise en place des pages : about & candidats disponible(En cours)

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <a class="nav-link active" aria-current="page" href="#">Accueil</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">A propos</a>
+                        <a class="nav-link" href="/about.html">A propos</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -58,7 +58,7 @@
                             Espace employeurs
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="candidats_disponibles.html">Candidats disponibles</a></li>
                             <li><a class="dropdown-item" href="#">Another action</a></li>
                             <li>
                                 <hr class="dropdown-divider">
@@ -212,9 +212,10 @@
                             </svg>
                         </p>
                     </div>
-                    <div class="card-abonnees bg-white shadow br-1 p-5 mx-auto position-absolute" >
+                    <div class="card-abonnees bg-white shadow br-1 p-5 mx-auto position-absolute">
                         <div class="d-flex  align-items-center">
-                            <div class=" icone-employe-div mx-auto " type="button" data-aos="zoom-in" data-aos-delay="400">
+                            <div class=" icone-employe-div mx-auto " type="button" data-aos="zoom-in"
+                                data-aos-delay="400">
                                 <svg viewBox="0 0 27 27" width="27" height="27" stroke="currentColor" stroke-width="2"
                                     fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1">
                                     <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2" Tiney="true"></path>
@@ -224,7 +225,8 @@
                                 </svg>
                             </div>
                             <div>
-                                <h1 class="mb-0 text-uppercase mt-3 fw-9 font-size-5" data-aos="fade-right" data-aos-delay="400">
+                                <h1 class="mb-0 text-uppercase mt-3 fw-9 font-size-5" data-aos="fade-right"
+                                    data-aos-delay="400">
                                     +23 K
                                 </h1>
                                 <p class="font-size-2 mb-5" data-aos="fade-down" data-aos-delay="400">
@@ -273,11 +275,11 @@
                     <h1 class="text-white text-uppercase mt-5 fw-9 font-size-7" data-aos="fade-up" data-aos-delay="600">
                         Solution
                     </h1>
-                    <p class="p1 text-white mb-5"  data-aos="fade-up" data-aos-delay="800">
+                    <p class="p1 text-white mb-5" data-aos="fade-up" data-aos-delay="800">
                         Le recrutement de travailleurs étrangers peut se révéler une solution appropriée pour répondre à
                         certaines pénuries de main-d’œuvre au Canada
                     </p>
-                    <div class="mt-5 pt-5 d-flex " type="button"  data-aos="fade-up" data-aos-delay="1000">
+                    <div class="mt-5 pt-5 d-flex " type="button" data-aos="fade-up" data-aos-delay="1000">
                         <p class="font-size-3 fw-6 text-uppercase text-white mb-5">
                             En savoir plus
                         </p>
@@ -302,7 +304,7 @@
         <div class="row m-0 p-0 position-relative">
 
             <div class="col-4 m-0  p-5 border-end border-light-subtle border-opacity-10"
-                style="border-color: #e9ecef4f!important;"  data-aos="flip-left" data-aos-delay="1000">
+                style="border-color: #e9ecef4f!important;" data-aos="flip-left" data-aos-delay="1000">
                 <!--  -->
                 <div class="p-5">
                     <h1 class="text-white text-uppercase mt-5 fw-9 font-size-5">
@@ -359,7 +361,8 @@
         <div class="row m-0 p-0 container mx-auto position-relative">
             <!--  -->
             <div class="col-12 m-0 p-0 pt-5">
-                <h1 class=" text-uppercase mt-5 fw-9 font-size-9 mb-0" style="position: relative;z-index:10" data-aos="fade-left" data-aos-delay="600">
+                <h1 class=" text-uppercase mt-5 fw-9 font-size-9 mb-0" style="position: relative;z-index:10"
+                    data-aos="fade-left" data-aos-delay="600">
                     Éprouvez-vous des peines pour trouver des vrais gens de métier ?
                 </h1>
                 <div class="image-scroll-container-y " style="max-height: 400px;margin-top: -30px;">
@@ -432,7 +435,8 @@
                     style="border-color: #e9ecef4f!important;">
                     <!--  -->
                     <div class="p-5">
-                        <a class="font-size-5 fw-9 navbar-brand  text-white" href="#" data-aos="zoom-in" data-aos-delay="600">
+                        <a class="font-size-5 fw-9 navbar-brand  text-white" href="#" data-aos="zoom-in"
+                            data-aos-delay="600">
                             Industrielle RH
                             <span class="d-block text-white font-size-2 fw-3 text-uppercase" style="margin-top: -5px;">
                                 recrutement international Quebéc
@@ -475,14 +479,16 @@
                 <div class="col-4 m-0  p-5 ">
                     <!--  -->
                     <div class="p-5">
-                        <h1 class="text-white text-uppercase  fw-9 font-size-5" data-aos="zoom-in" data-aos-delay="1000">
+                        <h1 class="text-white text-uppercase  fw-9 font-size-5" data-aos="zoom-in"
+                            data-aos-delay="1000">
                             Informations de contact
                         </h1>
                         <p class="font-size-2 text-white mb-3 mt-4">
                             <svg viewBox="0 0 24 24" width="28" height="28" stroke="#fff" stroke-width="2" fill="none"
                                 stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1">
                                 <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
-                                <polyline points="9 22 9 12 15 12 15 22" Tiney="true"></polyline></svg>
+                                <polyline points="9 22 9 12 15 12 15 22" Tiney="true"></polyline>
+                            </svg>
                             <span class="ms-3 text-white lh-lg">
                                 Address: 755-E Matte, Brossard, Québec, J4Y 2P4
                             </span>
