Mise en place de la page candidats disponible(fin)

--- a/candidats_disponibles.html
+++ b/candidats_disponibles.html
@@ -119,27 +119,22 @@
 
     <!-- Section scroll image -->
     <section class="container-fluid m-0 p-0 section1">
-        <div class="row m-0 p-0 position-relative">
-            <div class="col-6 m-0 section3  p-5">
+        <div class="row m-0 p-0 section3 position-relative">
+            <div class="col-6 m-0   p-5">
                 <!--  -->
                 <div class="p-5">
-                    <h1 class=" text-uppercase mt-5 pt-5 fw-9 font-size-7" data-aos="fade-up"
-                        data-aos-delay="600">
+                    <h1 class=" text-uppercase mt-5 pt-5 fw-9 font-size-7" data-aos="fade-up" data-aos-delay="600">
                         Candidatures qualifiées disponibles pour emploi au Québec et Canada
                     </h1>
-
-
-
                 </div>
                 <!--  -->
             </div>
             <div class="col-6 m-0   p-5">
                 <!--  -->
                 <br><br>
-                <div class="bg-footer p-5 mt-5">
-                    
+                <div class="bg-footer p-5 mt-5 br-1">
                     <p class="font-size-2 text-white my-5" data-aos="fade-up" data-aos-delay="800">
-                       <span class="fw-10 text-white"> Banque de main-d’œuvre et travailleurs étrangers</span>
+                        <span class="fw-10 text-white"> Banque de main-d’œuvre et travailleurs étrangers</span>
                         <br><br>
                         Les personnes en recherche d’emploi qui apparaissent sur cette page sont soit au Canada ou à
                         l’étranger et certaines ont déjà un permis de travail valide.
@@ -152,8 +147,6 @@
                         votre équipe, contactez-nous pour en connaitre plus sur son parcours professionnel et ses
                         attentes envers son prochain emploi au Canada.
                     </p>
-
-
                 </div>
                 <!--  -->
             </div>
@@ -161,10 +154,184 @@
         </div>
     </section>
     <!-- Fin Section scroll image -->
+    <!-- Section scroll image -->
+    <section class="container-fluid m-0 p-0 ">
+        <div class="row m-0 p-0 position-relative">
+            <div class="col-6 m-0 p-0">
+                <!--  -->
+                <img src="assets/images/femme-manufactured.jpg" alt="" class="image-fluid" data-aos="zoom-in"
+                    data-aos-delay="600">
+                <!--  -->
+            </div>
+            <div class="col-6 m-0   p-5">
+                <!--  -->
+                <div class="p-5">
+                    <h1 class=" text-uppercase fw-9 font-size-7" data-aos="fade-up" data-aos-delay="600">
+                        Manutentionnaires
+                    </h1>
+                    <p class="font-size-2 my-4" data-aos="fade-up" data-aos-delay="800">
+                        Les manutentionnaires sont des travailleurs qui sont chargés de manipuler et déplacer des
+                        charges, que ce soit manuellement ou à l'aide d'équipements de manutention tels que des
+                        chariots, des transpalettes ou des grues. Ils jouent un rôle essentiel dans divers secteurs tels
+                        que la logistique, l'entreposage, la construction, l'industrie manufacturière, etc.
+                    </p>
+                    <p class="font-size-2 " data-aos="fade-up" data-aos-delay="1000">
+                        Il est important pour les manutentionnaires d'avoir une bonne condition physique, une capacité à
+                        suivre les instructions, une attention aux détails et une connaissance des pratiques de
+                        sécurité. Ils doivent également être capables de travailler efficacement dans un environnement
+                        souvent dynamique et exigeant.
+                        <br><br>
+                        Notez que les responsabilités spécifiques des manutentionnaires peuvent varier en fonction du
+                        secteur d'activité et de l'entreprise pour laquelle ils travaillent.
+                    </p>
+                </div>
+                <!--  -->
+            </div>
 
 
+        </div>
+    </section>
+    <!-- Fin Section scroll image -->
+
+    <!-- Section scroll image -->
+    <section class="container-fluid m-0 p-0 ">
+        <div class="row m-0 p-0 position-relative">
+
+            <div class="col-6 m-0   p-5">
+                <!--  -->
+                <div class="p-5">
+                    <h1 class=" text-uppercase  fw-9 font-size-7" data-aos="fade-up" data-aos-delay="600">
+                        Soudeurs
+                    </h1>
+                    <p class="font-size-2 my-4" data-aos="fade-up" data-aos-delay="800">
+                        Les soudeurs sont des professionnels spécialisés dans le processus de soudage, qui consiste à
+                        fusionner et à assembler des pièces métalliques en utilisant la chaleur générée par un arc
+                        électrique, une flamme ou d'autres sources de chaleur.
+                    </p>
+                    <p class="font-size-2 mb-4" data-aos="fade-up" data-aos-delay="1000">
+                        Les soudeurs doivent avoir une connaissance approfondie des techniques de soudage, des matériaux
+                        métalliques, des codes et des normes applicables. Ils doivent également avoir de bonnes
+                        compétences en coordination manuelle, une vision précise et une attention aux détails pour
+                        réaliser des soudures de qualité.
+                        <br><br>
+                        Notez que les responsabilités spécifiques des soudeurs peuvent varier en fonction du type
+                        d'industrie dans laquelle ils travaillent, tels que la construction, la fabrication,
+                    </p>
+                </div>
+                <!--  -->
+            </div>
+            <div class="col-6 m-0 p-0 ps-5">
+                <!--  -->
+                <img src="assets/images/soudeur.jpg" alt="" class="image-fluid" data-aos="zoom-in" data-aos-delay="600">
+                <!--  -->
+            </div>
+
+        </div>
+    </section>
+    <!-- Fin Section scroll image -->
+
+    <!-- Section scroll image -->
+    <section class="container-fluid m-0 p-0 ">
+        <div class="row m-0 p-0 position-relative">
+            <div class="col-6 m-0 p-0">
+                <!--  -->
+                <img src="assets/images/machinistes.jpg" alt="" class="image-fluid" data-aos="zoom-in"
+                    data-aos-delay="600">
+                <!--  -->
+            </div>
+            <div class="col-6 m-0   p-5">
+                <!--  -->
+                <div class="p-5">
+                    <h1 class=" text-uppercase fw-9 font-size-7" data-aos="fade-up" data-aos-delay="600">
+                        Machinistes
+                    </h1>
+                    <p class="font-size-2 my-4" data-aos="fade-up" data-aos-delay="800">
+                        Les machinistes sont des professionnels qualifiés qui travaillent avec des machines-outils pour
+                        fabriquer et réparer des pièces métalliques ou en plastique. Ils sont essentiels dans les
+                        industries de la fabrication, de la construction, de l'aérospatiale, de l'automobile et de
+                        nombreuses autres.
+                    </p>
+                    <p class="font-size-2 " data-aos="fade-up" data-aos-delay="1000">
+                        Les machinistes doivent avoir une bonne compréhension des principes de l'usinage, des matériaux
+                        et des outils de coupe, ainsi qu'une maîtrise des techniques de mesure et de contrôle de la
+                        qualité. <br><br> Ils doivent également faire preuve de précision, d'attention aux détails et de
+                        compétences en résolution de problèmes pour produire des pièces de haute qualité dans les délais
+                        requis.
+                    </p>
+                </div>
+                <!--  -->
+            </div>
 
 
+        </div>
+    </section>
+    <!-- Fin Section scroll image -->
+
+    <!-- Section scroll image -->
+    <section class="container-fluid m-0 p-0 ">
+        <div class="row m-0 p-0 position-relative">
+
+            <div class="col-6 m-0   p-5">
+                <!--  -->
+                <div class="p-5">
+                    <h1 class=" text-uppercase  fw-9 font-size-7" data-aos="fade-up" data-aos-delay="600">
+                        électriciens industriels
+                    </h1>
+                    <p class="font-size-2 my-4" data-aos="fade-up" data-aos-delay="800">
+                        Les électriciens industriels sont des professionnels qualifiés qui travaillent dans le domaine
+                        de l'électricité au sein des installations industrielles. Leur rôle principal est d'assurer le
+                        bon fonctionnement, la maintenance et la réparation des systèmes électriques dans un
+                        environnement industriel.
+                    </p>
+                    <p class="font-size-2 mb-4" data-aos="fade-up" data-aos-delay="1000">
+                        Les électriciens industriels doivent posséder une solide formation en électricité, une
+                        connaissance approfondie des systèmes électriques industriels et des compétences techniques pour
+                        résoudre les problèmes électriques complexes. 
+                    </p>
+                </div>
+                <!--  -->
+            </div>
+            <div class="col-6 m-0 p-0 ps-5">
+                <!--  -->
+                <img src="assets/images/electricien.jpg" alt="" class="image-fluid" data-aos="zoom-in"
+                    data-aos-delay="600">
+                <!--  -->
+            </div>
+
+        </div>
+    </section>
+    <!-- Fin Section scroll image -->
+    <!-- Section scroll image -->
+    <section class="container-fluid m-0 p-0 section3">
+        <div class="row m-0 p-0 position-relative">
+            <div class="col-6 m-0 p-5 pe-0">
+                <!--  -->
+                <img src="assets/images/femme-capenter.jpg" alt="" class="image-fluid w-100" data-aos="zoom-in"
+                    data-aos-delay="600">
+                <!--  -->
+            </div>
+            <div class="col-6 m-0   p-5">
+                <!--  -->
+                <div class="p-5">
+                    <h1 class=" text-uppercase fw-9 font-size-7" data-aos="fade-up" data-aos-delay="600">
+                        autres professionnels des métiers de l'industrie
+                    </h1>
+                    <p class="font-size-2 my-4" data-aos="fade-up" data-aos-delay="800">
+                        En plus des professionnels mentionnés précédemment, voici quelques autres métiers courants dans le domaine de l'industrie :
+                    </p>
+                    <p class="font-size-2 fw-6" data-aos="fade-up" data-aos-delay="1000">
+                        Ingénieurs industriels <br>
+                        Mécaniciens industriels <br>
+                        Opérateurs de machines ...
+                    </p>
+                </div>
+                <!--  -->
+            </div>
+
+
+        </div>
+    </section>
+    <!-- Fin Section scroll image -->
     <!-- Fin Main -->
     <footer>
         <!-- Fin Section scroll image -->
