--- a/candidats_disponibles.html
+++ b/candidats_disponibles.html
@@ -155,7 +155,7 @@
     </section>
     <!-- Fin Section scroll image -->
     <!-- Section scroll image -->
-    <section class="container-fluid m-0 p-0 ">
+    <section class="container-fluid m-0 p-0  point-bg">
         <div class="row m-0 p-0 position-relative">
             <div class="col-6 m-0 p-0">
                 <!--  -->
@@ -194,7 +194,7 @@
     <!-- Fin Section scroll image -->
 
     <!-- Section scroll image -->
-    <section class="container-fluid m-0 p-0 ">
+    <section class="container-fluid m-0 p-0 point-bg">
         <div class="row m-0 p-0 position-relative">
 
             <div class="col-6 m-0   p-5">
@@ -231,7 +231,7 @@
     <!-- Fin Section scroll image -->
 
     <!-- Section scroll image -->
-    <section class="container-fluid m-0 p-0 ">
+    <section class="container-fluid m-0 p-0 point-bg">
         <div class="row m-0 p-0 position-relative">
             <div class="col-6 m-0 p-0">
                 <!--  -->
@@ -268,7 +268,7 @@
     <!-- Fin Section scroll image -->
 
     <!-- Section scroll image -->
-    <section class="container-fluid m-0 p-0 ">
+    <section class="container-fluid m-0 p-0 point-bg">
         <div class="row m-0 p-0 position-relative">
 
             <div class="col-6 m-0   p-5">
