--- a/index.html
+++ b/index.html
@@ -241,14 +241,12 @@
             <div class="col-5 m-0 bg-white p-0">
                 <div class="image-scroll-container ">
                     <div class="image-scroll-wrapper ">
-                        <img src="/assets/images/carpenter.jpg" alt="" class="img-fluid">
-                        <img src="/assets/images/ai-generative.jpg" alt="" class="img-fluid">
-                        <img src="/assets/images/happy-black-female-business.jpg" alt="" class="img-fluid">
+                        <img src="./assets/images/carpenter.jpg" alt="" class="img-fluid">
+                        <img src="./assets/images/ai-generative.jpg" alt="" class="img-fluid">
+                        <img src="./assets/images/happy-black-female-business.jpg" alt="" class="img-fluid">
                         <!-- Ajoutez d'autres images ici -->
                     </div>
                 </div>
-
-
             </div>
         </div>
     </section>
@@ -260,10 +258,10 @@
             <div class="col-6 m-0 bg-white p-0">
                 <div class="image-scroll-container-y ">
                     <div class="image-scroll-wrapper-y ">
-                        <img src="/assets/images/jeune-homme-ouvrier.jpg" alt="" class="img-fluid">
-                        <img src="/assets/images/femme-manufactured.jpg" alt="" class="img-fluid">
-                        <img src="/assets/images/femme-capenter.jpg" alt="" class="img-fluid">
-                        <img src="/assets/images/jeune-homme-ouvrier.jpg" alt="" class="img-fluid">
+                        <img src="./assets/images/jeune-homme-ouvrier.jpg" alt="" class="img-fluid">
+                        <img src="./assets/images/femme-manufactured.jpg" alt="" class="img-fluid">
+                        <img src="./assets/images/femme-capenter.jpg" alt="" class="img-fluid">
+                        <img src="./assets/images/jeune-homme-ouvrier.jpg" alt="" class="img-fluid">
                         <!-- Ajoutez d'autres images ici -->
                     </div>
                 </div>
@@ -367,13 +365,13 @@
                 </h1>
                 <div class="image-scroll-container-y " style="max-height: 400px;margin-top: -30px;">
                     <div class="image-scroll-wrapper-y ">
-                        <img src="/assets/images/jeune-homme-ouvrier.jpg" alt="" class="img-fluid">
-                        <img src="/assets/images/femme-manufactured.jpg" alt="" class="img-fluid">
-                        <img src="/assets/images/femme-capenter.jpg" alt="" class="img-fluid">
-                        <img src="/assets/images/jeune-homme-ouvrier.jpg" alt="" class="img-fluid">
-                        <img src="/assets/images/femme-manufactured.jpg" alt="" class="img-fluid">
-                        <img src="/assets/images/femme-capenter.jpg" alt="" class="img-fluid">
-                        <img src="/assets/images/jeune-homme-ouvrier.jpg" alt="" class="img-fluid">
+                        <img src="./assets/images/jeune-homme-ouvrier.jpg" alt="" class="img-fluid">
+                        <img src="./assets/images/femme-manufactured.jpg" alt="" class="img-fluid">
+                        <img src="./assets/images/femme-capenter.jpg" alt="" class="img-fluid">
+                        <img src="./assets/images/jeune-homme-ouvrier.jpg" alt="" class="img-fluid">
+                        <img src="./assets/images/femme-manufactured.jpg" alt="" class="img-fluid">
+                        <img src="./assets/images/femme-capenter.jpg" alt="" class="img-fluid">
+                        <img src="./assets/images/jeune-homme-ouvrier.jpg" alt="" class="img-fluid">
                         <!-- Ajoutez d'autres images ici -->
                     </div>
                 </div>
