--- a/about.html
+++ b/about.html
@@ -164,16 +164,16 @@
             <div class="col-5 m-0 bg-white p-0">
                 <div class="row p-0 m-0 h-100">
                     <div class="col-6 p-0 m-0">
-                        <img src="/assets/images/carpenter.jpg" alt="" class="img-fluid h-100">
+                        <img src="./assets/images/carpenter.jpg" alt="" class="img-fluid h-100">
                     </div>
                     <div class="col-6 p-0 m-0">
-                        <img src="/assets/images/ai-generative.jpg" alt="" class="img-fluid h-100">
+                        <img src="./assets/images/ai-generative.jpg" alt="" class="img-fluid h-100">
                     </div>
                     <!-- <div class="col-6 p-0 m-0">
-                        <img src="/assets/images/happy-black-female-business.jpg" alt="" class="img-fluid h-100">
+                        <img src="./assets/images/happy-black-female-business.jpg" alt="" class="img-fluid h-100">
                     </div> -->
                     <div class="col-12 p-0 m-0">
-                        <img src="/assets/images/femme-capenter.jpg" alt="" class="img-fluid h-100">
+                        <img src="./assets/images/femme-capenter.jpg" alt="" class="img-fluid h-100">
                     </div>
 
                 </div>
