--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
             <div class=" " id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Accueil</a>
+                        <a class="nav-link active" aria-current="page" href="./index.html">Accueil</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/about.html">A propos</a>
+                        <a class="nav-link" href="./about.html">A propos</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -58,7 +58,7 @@
                             Espace employeurs
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="candidats_disponibles.html">Candidats disponibles</a></li>
+                            <li><a class="dropdown-item" href="./candidats_disponibles.html">Candidats disponibles</a></li>
                             <li><a class="dropdown-item" href="#">Another action</a></li>
                             <li>
                                 <hr class="dropdown-divider">
