--- a/index-1.html
+++ b/index-1.html
@@ -30,16 +30,31 @@
 
 <body>
     <div id="loader">
-        <img src="./assets/images/logo-white.png" alt="" srcset="">
+        <div class="text-center">
+            <img src="./assets/images/logo-white.png" alt="" class="mx-auto ms-5" srcset="">
+            <div class="h-logo d-block mt-3">
+                <div class="font-size-5 text-center">
+                    Industrielle RH
+                    <span class="d-block font-size-3 fw-4 text-uppercase" style="margin-top: -5px;">
+                        recrutement international Quebéc
+                    </span>
+                </div>
+            </div>
+        </div>
     </div>
     <!-- Nav Bar -->
     <nav class="navbar navbar-expand-lg py-4 bg-white container-fluid mx-0 px-5 fixed-top">
         <div class="container-fluid px-0 mx-0 d-flex justify-content-between align-items-center">
-            <a class="navbar-brand h-logo" href="#">
-                Industrielle RH
-                <span class="d-block font-size-1 fw-4 text-uppercase" style="margin-top: -5px;">
-                    recrutement international Quebéc
-                </span>
+            <a class="navbar-brand h-logo" href="./index.html">
+                <div class="d-flex align-items-center">
+                    <img src="./assets/images/logo-white.png" width="50" class="me-2" alt="" srcset="">
+                    <div>
+                        Industrielle RH
+                        <span class="d-block font-size-1 fw-4 text-uppercase" style="margin-top: -5px;">
+                            recrutement international Quebéc
+                        </span>
+                    </div>
+                </div>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -529,11 +544,11 @@
 <!-- Partie des CDN JS -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.7.0.slim.min.js"
-    integrity="sha256-tG5mcZUtJsZvyKAxYLVXrmjKBVLd6VpVccqz/r4ypFE=" crossorigin="anonymous"  async defer></script>
+    integrity="sha256-tG5mcZUtJsZvyKAxYLVXrmjKBVLd6VpVccqz/r4ypFE=" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-    crossorigin="anonymous"  async defer></script>
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"  async defer></script>
+    crossorigin="anonymous"></script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script src="/js/accueil.js"></script>
 <script>
     AOS.init();
